# opentelemetry-demo

./: .env  Makefile  docker-compose copy.yml  docker-compose.yml  eks-cluster-config.yaml
kubernetes/: eks_cluster.yaml  k8s_commands.sh  opentelemetry-collector.yaml  opentelemetry-data-prepper.yaml  opentelemetry-demo.yaml  opentelemetry-eks.yaml  opentelemetry-loadbalancer.yaml  opentelemetry-opensearch.yaml  opentelemetry-otelcol.yaml  opentelemetry-prepper.yaml  opentelemetry_k8_daemonset_agent.yaml  opentelemetry_observability_tools.yaml
src/cartservice/src/cartstore/: ValkeyCartStore.cs
src/cartservice/src/services/: CartService.cs
src/checkoutservice/: Dockerfile  go.mod  go.sum  main.go
src/dashboards/config/: opensearch_dashboards.yml
src/dataprepper/: pipelines.yaml
src/flagd/: demo.flagd.json
src/opensearch/: Dockerfile  createPromDB.sh
src/otelcollector/: otelcol-config.yml
src/paymentservice/: charge.js  index.js  opentelemetry.js  package-lock.json  package.json
src/productcatalogservice/: Dockerfile  go.mod  go.sum  main.go
src/prometheus/: prometheus-config.yaml
src/recommendationservice/: requirements.txt
src/shippingservice/: Cargo.toml  Dockerfile
src/shippingservice/src/: main.rs
src/shippingservice/src/telemetry/: logs_conf.rs
