

[package]
name = "shippingservice"
version = "1.8.0"
edition = "2021"

[[bin]]
name = "shippingservice"
path = "src/main.rs"

[features]
dockerproto = [] # compile in docker or not

[dependencies]
tonic = "0.11"
tonic-health = "0.11.0"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
opentelemetry = { version = "0.22.0", features = ["trace", "logs"] }
opentelemetry_sdk = { version = "0.22.0", features = ["rt-tokio", "logs"]}
opentelemetry-semantic-conventions = "0.15.0"
opentelemetry-http = "0.11.0"
opentelemetry-otlp = { version = "0.15.0", features = ["tonic", "logs"] }
log = "0.4.21"
simplelog = "0.12"
reqwest-middleware = "0.2.5"
reqwest-tracing = { version = "0.4.8", features = ["opentelemetry_0_22"] }
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_info"] }
tracing-opentelemetry = "0.23.0"
tracing-subscriber = "0.3"
opentelemetry-stdout = {version = "0.3.0", features = ["logs"]}
opentelemetry-appender-log = {version = "0.3.0", default-features = false}
opentelemetry-resource-detectors = "0.3.0"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
tonic-build = "0.11"
